welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: reassignment to val
	if(litMessage = "A"){
                      ^BDRBuggle:5: error: reassignment to val
	if(litMessage = "B"){
                      ^BDRBuggle:9: error: reassignment to val
	if(litMessage = "R"){
                      ^BDRBuggle:13: error: reassignment to val
	if(litMessage = "L"){
                      ^BDRBuggle:17: error: reassignment to val
	if(litMessage = "I"){
                      ^BDRBuggle:22: error: reassignment to val
	if(litMessage = "C"){
                      ^BDRBuggle:27: error: reassignment to val
	if(litMessage = "Z"){
                      ^BDRBuggle:30: error: reassignment to val
	if(litMessage = "Y"){
                      ^BDRBuggle:34: error: reassignment to val
	if(litMessage = "Z"){
                      ^